Testing with CORS enabled for category delete.